--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,7 +26,7 @@ jobs:
         id: meta
         uses: docker/metadata-action@v5
         with:
-          images: ${{ secrets.DOCKERHUB_NAME  }}/holamundobase
+          images: ${{ secrets.DOCKERHUB_NAME  }}/holamundoopenshift
           tags: |
             type=raw,value=build-${{ github.run_number }}
 
