--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   build-and-deploy:
-    uses: alexisvg2520/devops-pipelines/.github/workflows/docker-workflow.yml@main
+    uses: alexisvg2520/devops-pipelines/.github/workflows/docker-workflow.yml@master
     with:
       docker_image_name: holamundoopenshift
     secrets: inherit
